--- a/src/assets/locales/es.json
+++ b/src/assets/locales/es.json
@@ -2,20 +2,11 @@
 	"table": {
 		"interval": "Intervalo",
 		"realLimits": "Límites Reales",
+		"value": "Valor",
 		"frequency": "Frecuencia",
 		"relativeFrequency": "Frecuencia Relativa",
 		"cumulativeFrequency": "Frecuencia Acumulada",
 		"cumulativeRelativeFrequency": "Frecuencia Relativa Acumulada",
 		"classMark": "Marca de Clase"
-	},
-	"results": {
-		"median": "Media",
-		"mode": "Moda",
-		"average": "Mediana",
-		"stdDeviation": "Desviación Estándar",
-		"variance": "Varianza",
-		"typDeviation": "Desviación Típica",
-		"bias": "Sesgo",
-		"skewness": "Asimetría"
 	}
 }
