--- a/src/assets/locales/es.json
+++ b/src/assets/locales/es.json
@@ -1,12 +1,12 @@
 {
 	"table": {
-		"interval": "Intervalo",
+		"interval": "Intervalo (x)",
 		"realLimits": "Límites Reales",
-		"value": "Valor",
-		"frequency": "Frecuencia",
-		"relativeFrequency": "Frecuencia Relativa",
-		"cumulativeFrequency": "Frecuencia Acumulada",
-		"cumulativeRelativeFrequency": "Frecuencia Relativa Acumulada",
+		"value": "Valor (x)",
+		"frequency": "Frecuencia (f)",
+		"relativeFrequency": "Frecuencia Relativa(fr)",
+		"cumulativeFrequency": "Frecuencia Acumulada (F)",
+		"cumulativeRelativeFrequency": "Frecuencia Relativa Acumulada(F)",
 		"classMark": "Marca de Clase"
 	}
 }
